@@ -3,10 +3,10 @@ title: 연결된 에셋을 사용하여  [!DNL Sites]에서 DAM 에셋 공유
 description: 원격 [!DNL Adobe Experience Manager Assets] deployment when creating your web pages on another [!DNL Adobe Experience Manager Sites] 배포에 사용할 수 있는 자산을 사용합니다.
 contentOwner: AG
 translation-type: tm+mt
-source-git-commit: 29c3ca56281c482f195d84590ceb4ef07c556e64
+source-git-commit: caf50490c573c2f119f2cbfa14ee7cca12854364
 workflow-type: tm+mt
-source-wordcount: '2240'
-ht-degree: 40%
+source-wordcount: '2688'
+ht-degree: 28%
 
 ---
 
@@ -45,16 +45,17 @@ ht-degree: 40%
 
 ### 관련 사용자 및 그룹 {#users-and-groups-involved}
 
-기능 및 해당 사용자 그룹을 구성하고 사용하는 데 관련된 여러 가지 역할이 아래에 설명되어 있습니다. 로컬 범위는 작성자가 웹 페이지를 만드는 사용 사례에 사용됩니다. 원격 범위는 필요한 자산을 호스팅하는 DAM 배포에 사용됩니다. [!DNL Sites] 작성자는 이러한 원격 자산을 가져옵니다.
+기능 및 해당 사용자 그룹을 구성하고 사용하는 데 관련된 여러 가지 역할이 아래에 설명되어 있습니다. 로컬 범위는 작성자가 웹 페이지를 만드는 사용 사례에 사용됩니다. 원격 범위는 DAM 배포에 사용됩니다. [!DNL Sites] 작성자는 이러한 원격 자산을 가져옵니다.
 
 | 역할 | 범위 | 사용자 그룹 | 연습의 사용자 이름 | 요구 사항 |
-|----------------------------------|--------|------------------------------------------------------------------------------|--------------------------|--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+|------|--------|-----------|-----|----------|
 | [!DNL Sites] administrator | 로컬 | [!DNL Experience Manager] `administrators` | `admin` | [!DNL Experience Manager]을 설정하고 원격 [!DNL Assets] 배포와의 통합을 구성합니다. |
 | DAM 사용자 | 로컬 | `Authors` | `ksaner` | `/content/DAM/connectedassets/`에서 가져온 자산을 보고 복제하는 데 사용됩니다. |
-| [!DNL Sites] 작성자 | 로컬 | `Authors` (원격 DAM에 대한 읽기 액세스 및 로컬에 대한 작성자 액세스  [!DNL Sites]사용) | `ksaner` | 최종 사용자는 컨텐트 속도를 개선하기 위해 이 통합을 사용하는 작성자입니다. [!DNL Sites] 작성자는 [!UICONTROL 컨텐츠 파인더]를 사용하여 원격 DAM에서 자산을 검색하고 로컬 웹 페이지에서 필요한 이미지를 사용합니다. `ksaner` DAM 사용자의 자격 증명이 사용됩니다. |
+| [!DNL Sites] 작성자 | 로컬 | <ul><li>`Authors` (원격 DAM에 대한 읽기 액세스 및 로컬에 대한 작성자 액세스  [!DNL Sites]사용) </li> <li>`dam-users` 로컬  [!DNL Sites]</li></ul> | `ksaner` | 최종 사용자는 컨텐트 속도를 개선하기 위해 이 통합을 사용하는 작성자입니다. [!DNL Sites] 작성자는 [!UICONTROL 컨텐츠 파인더]를 사용하여 원격 DAM에서 자산을 검색하고 로컬 웹 페이지에서 필요한 이미지를 사용합니다. `ksaner` DAM 사용자의 자격 증명이 사용됩니다. |
 | [!DNL Assets] administrator | 원격 | [!DNL Experience Manager] `administrators` | `admin` 원격  [!DNL Experience Manager] | CORS(원본 간 리소스 공유)를 구성합니다. |
 | DAM 사용자 | 원격 | `Authors` | `ksaner` 원격  [!DNL Experience Manager] | 원격 [!DNL Experience Manager] 배포의 작성자 역할. [!UICONTROL Content Finder]를 사용하여 연결된 자산에서 자산을 검색하고 찾아봅니다. |
-| DAM 배포자(기술 사용자) | 원격 | [!DNL Sites] `Authors` | `ksaner` 원격  [!DNL Experience Manager] | 원격 배포에 있는 이 사용자는 [!DNL Sites] 작성자 역할이 아닌 [!DNL Experience Manager] 로컬 서버에서 원격 자산을 가져오기 위해 [!DNL Sites] 작성자를 대신하여 사용됩니다. 이 역할은 위의 두 `ksaner` 역할과 동일하지 않으며 다른 사용자 그룹에 속합니다. |
+| DAM 배포자(기술 사용자) | 원격 | <ul> <li> [!DNL Sites] `Authors`</li> <li> `connectedassets-assets-techaccts` </li> </ul> | `ksaner` 원격  [!DNL Experience Manager] | 원격 배포에 있는 이 사용자는 [!DNL Sites] 작성자 역할이 아닌 [!DNL Experience Manager] 로컬 서버에서 원격 자산을 가져오기 위해 [!DNL Sites] 작성자를 대신하여 사용됩니다. 이 역할은 위의 두 `ksaner` 역할과 동일하지 않으며 다른 사용자 그룹에 속합니다. |
+| [!DNL Sites] 기술 사용자 | 로컬 | `connectedassets-sites-techaccts` | - | [!DNL Assets] 배포에서 [!DNL Sites] 웹 페이지에서 자산에 대한 참조를 검색할 수 있습니다. |
 
 ## [!DNL Sites]과 [!DNL Assets] 배포 사이의 연결 구성 {#configure-a-connection-between-sites-and-assets-deployments}
 
@@ -62,29 +63,28 @@ ht-degree: 40%
 
 연결된 자산 및 로컬 [!DNL Sites] 연결을 구성하려면 다음 단계를 따르십시오.
 
-1. 기존 [!DNL Sites] 배포에 액세스하거나 다음 명령을 사용하여 배포를 만듭니다.
+1. 기존 [!DNL Sites] 배포에 액세스합니다. 이 [!DNL Sites] 배포는 웹 페이지 작성에 사용됩니다(예: `https://[sites_servername]:port`). 페이지 작성이 [!DNL Sites] 배포에서 수행되므로 페이지 작성 관점에서 [!DNL Sites] 배포를 로컬로 호출하겠습니다.
 
-   1. JAR 파일의 폴더에서 터미널에서 다음 명령을 실행하여 각 [!DNL Experience Manager] 서버를 만듭니다.
-      `java -XX:MaxPermSize=768m -Xmx4096m -jar <quickstart jar filepath> -r samplecontent -p 4502 -nofork -gui -nointeractive &`
+1. 기존 [!DNL Assets] 배포에 액세스합니다. 이 [!DNL Assets] 배포는 디지털 자산을 관리하는 데 사용됩니다(예: `https://[assets_servername]:port`).
 
-   1. 몇 분 후 [!DNL Experience Manager] 서버가 시작됩니다. 이 [!DNL Sites] 배포를 웹 페이지 작성을 위한 로컬 컴퓨터로 생각해 보십시오(예: `https://[local_sites]:4502`).
+1. 적절한 범위의 사용자 및 역할이 AMS의 [!DNL Sites] 배포 및 [!DNL Assets] 배포에 있는지 확인합니다. [!DNL Assets] 배포에 기술 사용자를 만들고 [에 언급된 사용자 및 그룹](/help/assets/use-assets-across-connected-assets-instances.md#users-and-groups-involved)에 추가합니다.
 
-1. 로컬 범위의 사용자 및 역할이 AMS의 [!DNL Sites] 배포 및 [!DNL Assets] 배포에 있는지 확인합니다. [!DNL Assets] 배포에 기술 사용자를 만들고 [에 언급된 사용자 및 그룹](/help/assets/use-assets-across-connected-assets-instances.md#users-and-groups-involved)에 추가합니다.
+1. `https://[sites_servername]:port`의 로컬 [!DNL Sites] 배포에 액세스합니다. **[!UICONTROL 도구]** > **[!UICONTROL 자산]** > **[!UICONTROL 연결된 자산 구성]**&#x200B;을 클릭합니다.다음 값을 제공합니다.
 
-1. `https://[local_sites]:4502`의 로컬 [!DNL Sites] 배포에 액세스합니다. **[!UICONTROL 도구]** > **[!UICONTROL 자산]** > **[!UICONTROL 연결된 자산 구성]**&#x200B;을 클릭하고 다음 값을 제공합니다.
-
-   1. [!DNL Assets] 위치는 입니다 `https://[assets_servername_ams]:[port]`.
+   1. 구성의 **[!UICONTROL 제목]**&#x200B;입니다.
+   1. **[!UICONTROL 원격 DAM]** URL은 형식의  [!DNL Assets] 위치 URL입니다 `https://[assets_servername]:[port]`.
    1. DAM 배포자의 자격 증명(기술 사용자)
-   1. **[!UICONTROL 마운트 지점]** 필드에 자산을 포함하는 로컬 [!DNL Experience Manager] 경로를 입력합니다. [!DNL Experience Manager] 예를 들면 `remoteassets` 폴더를 입력합니다.
+   1. **[!UICONTROL 마운트 지점]** 필드에 자산을 포함하는 로컬 [!DNL Experience Manager] 경로를 입력합니다. [!DNL Experience Manager] 예를 들면 `connectedassets` 폴더를 입력합니다. DAM에서 가져오는 에셋은 [!DNL Sites] 배포의 이 폴더에 저장됩니다.
+   1. **[!UICONTROL 로컬 사이트]** URL은 배포의  [!DNL Sites] 위치입니다. [!DNL Assets] 배포에서는 이 값을 사용하여 이 배포로 가져온 디지털 자산에 대한 참조를 유지  [!DNL Sites] 유지합니다.
+   1. [!DNL Sites] 기술 사용자의 자격 증명입니다.
+   1. **[!UICONTROL 원본 이진 전송 최적화 임계값]** 필드의 값은 원본 자산(표현물 포함)이 동기적으로 전송되는지 여부를 지정합니다. 파일 크기가 작은 에셋은 비동기적으로 가장 많이 동기화된 반면, 파일 크기가 상대적으로 큰 에셋은 즉시 가져올 수 있습니다. 값은 네트워크 기능에 따라 다릅니다.
+   1. 데이터 저장소를 사용하여 자산을 저장하고 데이터 저장소가 두 배포의 공통 저장소인 경우 **[!UICONTROL 연결된 자산과 공유되는 데이터 저장소]**&#x200B;를 선택합니다. 이 경우 실제 자산 바이너리를 데이터 저장소에서 사용할 수 있고 전송되지 않으므로 임계값 제한은 중요하지 않습니다.
 
-   1. 네트워크에 따라 **[!UICONTROL 원본 이진 전송 최적화 임계값]**&#x200B;의 값을 조정합니다. 이 임계값보다 크기가 큰 자산 렌디션은 비동기적으로 전송됩니다.
-   1. 데이터 저장소를 사용하여 자산을 저장하고 데이터 저장소가 두 배포의 공통 저장소인 경우 **[!UICONTROL 연결된 자산과 공유되는 데이터 저장소]**&#x200B;를 선택합니다. 이 경우 실제 자산 바이너리가 데이터 저장소에 있고 전송되지 않으므로 임계값 제한은 문제가 되지 않습니다.
+   ![연결된 에셋 기능에 대한 일반적인 구성](assets/connected-assets-typical-config.png)
 
-   ![연결된 자산에 대한 일반적인 구성](assets/connected-assets-typical-config.png)
+   *그림:연결된 에셋 기능에 대한 일반적인 구성입니다.*
 
-   *그림: 연결된 자산에 대한 일반적인 구성.*
-
-1. 자산이 이미 처리되고 렌디션을 가져올 때 워크플로우 런처를 비활성화합니다. 원격 자산을 가져오는 `connectedassets` 폴더를 제외하려면 로컬([!DNL Sites]) 배포의 론치 구성을 조정합니다.
+1. [!DNL Assets] 배포의 기존 디지털 자산은 이미 처리되고 변환이 생성됩니다. 이러한 변환은 이 기능을 사용하여 가져와서 변환을 다시 생성할 필요가 없습니다. 표현물의 재재생성을 방지하기 위해 워크플로우 릴리스를 비활성화합니다. ([!DNL Sites]) 배포의 launcher 구성을 조정하여 `connectedassets` 폴더를 제외합니다(이 폴더에 에셋이 반입됨).
 
    1. [!DNL Sites] 배포에서 **[!UICONTROL 도구]** > **[!UICONTROL 워크플로]** > **[!UICONTROL 방사기]**&#x200B;를 클릭합니다.
 
@@ -104,13 +104,9 @@ ht-degree: 40%
    >
    >작성자가 자산을 가져올 때 원격 배포에서 사용할 수 있는 모든 렌디션을 가져옵니다. 가져온 자산의 렌디션을 더 만들려면 이 구성 단계를 건너뜁니다. [!UICONTROL DAM 자산 업데이트] 워크플로우가 트리거되어 더 많은 변환을 만듭니다. 이러한 변환은 로컬 [!DNL Sites] 배포에서만 사용할 수 있으며 원격 DAM 배포에서는 사용할 수 없습니다.
 
-1. 원격 [!DNL Assets'] CORS 구성에 **[!UICONTROL 허용된 원본]** 중 하나로 [!DNL Sites] 배포를 추가합니다.
+1. [!DNL Sites] 배포를 [!DNL Assets] 배포의 CORS 구성에서 허용된 원본으로 추가합니다. 자세한 내용은 [CORS](https://experienceleague.adobe.com/docs/experience-manager-learn/foundation/security/understand-cross-origin-resource-sharing.html) 이해를 참조하십시오.
 
-   1. 관리자 자격 증명을 사용하여 로그인합니다. `Cross-Origin`을 검색합니다. **[!UICONTROL 도구]** > **[!UICONTROL 작업]** > **[!UICONTROL 웹 콘솔]**&#x200B;에 액세스합니다.
-
-   1. [!DNL Sites] 배포에 대한 CORS 구성을 만들려면 **[!UICONTROL Adobe Granite Cross-Origin Resource Sharing Policy]** 옆에 있는 ![자산 추가 아이콘](assets/do-not-localize/aem_assets_add_icon.png) 추가 옵션을 클릭합니다.
-
-   1. **[!UICONTROL 허용된 원본]** 필드에 로컬 [!DNL Sites](즉, `https://[local_sites]:[port]`)의 URL을 입력합니다. 구성을 저장합니다.
+<!-- TBD: Check if Launchers are to be disabled on CS instances. Is this option even available to the users on CS? -->
 
 ## 원격 자산 사용 {#use-remote-assets}
 
@@ -140,7 +136,7 @@ ht-degree: 40%
 
    *그림: 원격 DAM에서 자산을 검색할 때 문서 유형 및 이미지를 필터링하는 옵션.*
 
-1. 자산을 비동기적으로 가져오는 경우 및 가져오기 작업이 실패할 경우 사이트 작성자에게 알립니다. 작성자는 작성 중이나 작성 후에도 [비동기 작업](/help/operations/asynchronous-jobs.md) 사용자 인터페이스에서 가져오기 작업 및 오류에 대한 자세한 정보를 볼 수 있습니다.
+1. 자산을 비동기적으로 가져오는 경우 및 가져오기 작업이 실패할 경우 사이트 작성자에게 알립니다. 작성자가 작성하는 동안 또는 작성 후에도 [비동기 작업](/help/operations/asynchronous-jobs.md) 사용자 인터페이스에서 가져오기 작업 및 오류에 대한 자세한 정보를 볼 수 있습니다.
 
    ![백그라운드에서 발생하는 자산의 비동기적 가져오기에 대한 알림.](assets/assets_async_transfer_fails.png)
 
@@ -158,15 +154,22 @@ ht-degree: 40%
 
 가져온 자산은 연결된 메타데이터를 편집할 수 없다는 점을 제외하고 다른 로컬 자산으로 사용할 수 있습니다.
 
-<!-- TBD: Uncomment after verification for Dec release.
+### 웹 페이지 {#asset-usage-references} 전체에서 에셋 사용 확인
 
-### Check use of an asset across other pages {#asset-usage-references}
+[!DNL Experience Manager] DAM 사용자가 자산에 대한 모든 참조를 확인할 수 있도록 합니다. 원격 [!DNL Sites] 및 복합 자산에서 에셋의 사용을 이해하고 관리하는 데 도움이 됩니다. [!DNL Experience Manager Sites] 배포의 웹 페이지의 많은 작성자는 다른 웹 페이지의 원격 [!DNL Assets]에 있는 자산을 사용할 수 있습니다. 에셋 관리를 간소화하고 잘못된 참조를 유도하지 않도록 DAM 사용자가 로컬 및 원격 웹 페이지에서 에셋 사용을 확인하는 것이 중요합니다. 자산의 [!UICONTROL 속성] 페이지에 있는 [!UICONTROL 참조] 탭에는 자산의 로컬 및 원격 참조가 나열됩니다.
 
-[!DNL Experience Manager] also lets you check all the incoming references to an asset, that is, the usage of an asset in remote [!DNL Sites] and in compound assets. Authors of webpages on [!DNL Experience Manager Sites] deployment can use an asset on a remote [!DNL Assets] deployment using the Connected Assets functionality. The [!UICONTROL References] tab in an asset's [!UICONTROL Properties] page lists the local and remote references of the asset.
+[!DNL Assets] 배포에서 참조를 보고 관리하려면 다음 단계를 수행합니다.
 
-Users can view incoming references of the assets and move or delete the asset.
+1. [!DNL Assets] 콘솔에서 자산을 선택하고 도구 모음에서 **[!UICONTROL 속성]**&#x200B;을 클릭합니다.
+1. **[!UICONTROL 참조]** 탭을 클릭합니다. [!DNL Assets] 배포에서 자산을 사용하려면 **[!UICONTROL 로컬 참조]**&#x200B;를 참조하십시오. 연결된 자산 기능을 사용하여 에셋을 가져온 [!DNL Sites] 배포에서 에셋을 사용하려면 **[!UICONTROL 원격 참조]을 참조하십시오.
 
--->
+   ![자산 속성의 원격 참조](assets/connected-assets-remote-reference.png)
+
+1. [!DNL Sites] 페이지에 대한 참조는 각 로컬 [!DNL Sites]에 대한 총 참조 수를 표시합니다. 모든 참조를 찾고 총 참조 수를 표시하는 데 시간이 걸릴 수 있습니다.
+1. 참조 목록은 대화형이고 DAM 사용자가 참조를 클릭하여 참조하는 페이지를 열 수 있습니다. 어떤 이유로 원격 참조를 가져올 수 없는 경우 사용자에게 실패를 알리는 알림이 표시됩니다.
+1. 사용자는 자산을 이동하거나 삭제할 수 있습니다. 자산을 이동하거나 삭제할 때 선택한 모든 자산/폴더의 총 참조 수가 경고 대화 상자에 표시됩니다. 참조가 아직 표시되지 않은 자산을 삭제하면 경고 대화 상자가 표시됩니다.
+
+   ![강제 삭제 경고](assets/delete-referenced-asset.png)
 
 ## 제한 사항 및 우수 사례 {#tip-and-limitations}
 
@@ -198,13 +201,18 @@ Users can view incoming references of the assets and move or delete the asset.
 *  `Image` 구성 요소를 통해 지원되는 편집과 원본에 영향을 주지 않는 간단한 편집은 가져온 자산에서 수행할 수 있습니다. 자산은 읽기 전용입니다.
 * 자산을 다시 반입하는 유일한 방법은 페이지에서 자산을 드래그하는 것입니다. 업데이트할 에셋을 다시 가져오는 API 지원 또는 다른 방법이 없습니다.
 * DAM에서 자산이 해체된 경우 해당 자산은 [!DNL Sites] 페이지에서 계속 사용 중입니다.
+* 자산의 원격 참조 항목은 비동기적으로 가져옵니다. 참조 및 총 개수는 실시간으로 표시되지 않으며 사이트 작성자가 DAM 사용자가 참조를 보는 동안 자산을 사용하는 경우 약간의 차이가 있을 수 있습니다. DAM 사용자는 페이지를 새로 고치고 몇 분 후에 다시 시도하여 총 개수를 가져올 수 있습니다.
 
 ## 문제 해결 {#troubleshoot}
 
-일반적인 오류 시나리오에 대한 문제를 해결하려면 다음 단계를 수행합니다.
+일반적인 오류를 해결하려면 다음 단계를 수행합니다.
 
 * [!UICONTROL Content Finder]에서 원격 자산을 검색할 수 없는 경우 필요한 역할 및 권한이 적절한지 확인합니다.
 * 원격 dam에서 가져온 에셋이 하나 이상의 이유로 웹 페이지에 게시되지 않을 수 있습니다. 원격 서버에 없거나, 해당 서버에 가져올 권한이 없거나, 네트워크 오류가 원인일 수 있습니다. 원격 DAM에서 에셋이 제거되지 않았는지 확인합니다. 적절한 권한이 적절하고 사전 요구 사항을 충족하는지 확인합니다. 자산을 페이지에 추가하고 다시 게시합니다. [비동기 작업 목록](/help/operations/asynchronous-jobs.md)에서 자산 가져오기 오류를 확인합니다.
 * 로컬 [!DNL Sites] 배포에서 원격 DAM 배포에 액세스할 수 없는 경우 사이트 간 쿠키가 허용되는지 확인하십시오. 사이트 간 쿠키가 차단된 경우 [!DNL Experience Manager]의 2개 배포가 인증되지 않을 수 있습니다. 예를 들어, Incognito 모드의 [!DNL Google Chrome]는 제3자 쿠키를 차단할 수 있습니다. [!DNL Chrome] 브라우저에서 쿠키를 허용하려면 주소 표시줄에서 &#39;눈&#39; 아이콘을 클릭하고 [작동하지 않음] > [차단됨]으로 이동한 다음 원격 DAM URL을 선택하고 로그인 토큰 쿠키를 허용합니다. 또는 [타사 쿠키 사용 방법](https://support.google.com/chrome/answer/95647)에 대한 도움말을 참조하십시오.
 
    ![Uncognito 모드의 Chrome에서 쿠키 오류 발생](assets/chrome-cookies-incognito-dialog.png)
+
+* 원격 참조가 검색되지 않고 오류 메시지가 표시되는 경우 사이트 배포를 사용할 수 있는지 확인하고 네트워크 연결 문제를 확인합니다. 확인을 위해 나중에 다시 시도하십시오. [!DNL Assets] 배포는 배포와 연결되도록 두 번 시도한  [!DNL Sites] 후 오류를 보고합니다.
+
+![자산 원격 참조를 다시 시도하지 못했습니다.](assets/reference-report-failure.png)
